frontend/src/index.scss
@import '../../shared/main';

:root {
    height: 100dvh; // workarounded chrome109-mobile's problem with sticky-bottom bar moving when scrolling

    --bg: #fff;
    --text: #555;
    --text-high-contrast: #111;
    --link: var(--button-bg);
    --ghost-contrast: #8882;
    --ghost-contrast-alt: #eee;
    --faint-contrast: #ddd;
    --mild-contrast: #aaa;
    --good-contrast: #444;
    --button-bg: #6080aa;
    --button-text: #eaeaea;
    --focus-color: #468;
    --separator: " – "; // fallback
    --success: #7c7;
    --warning: #cc7;
    --error: #c77;
    @supports (content: "" / "") {
        --separator: " – " / ""; // skip for screen-reader
    }
    .highlightedText { color: #0006; text-shadow: 0 0 3px #0006; }
    .theme-dark {
        --bg: #000;
        --text: #999;
        --text-high-contrast: #eee;
        --link: #8ac;
        --ghost-contrast-alt: #181818;
        --faint-contrast: #2d2d2d;
        --good-contrast: #aaa;
        --button-bg: #345;
        --button-text: #999;
        --success: #272;
        --warning: #772;
        --error: #a22;

        color-scheme: dark;
        .highlightedText { color: #fff; text-shadow: 0 0 3px #fff; }
        .dialog-closer { background: #633 }
        .dialog-icon {
            color: #ccc;
            .icon { color: #aaa; }
        }
        .dialog-backdrop { background: #333b; }
        .error-msg { color: #b88; background-color: #623; }
        button.toggled, a.toggled { color: #eee;
            text-shadow: 0 0 3px #fff;
        }
    }
}
body {
    background-color: var(--bg);
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
body, button, select, input { font-size: 12pt; }
.list-wrapper {
    max-width: 54em;
    margin: auto;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
body, input {
    color: var(--text);
}
code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}
input:not([type=checkbox],[type=range]), select, textarea {
    padding: 0.3em 0.4em;
    border-radius: 0.5em;
    background: var(--bg);
    border-color: var(--mild-contrast);
    color: var(--good-contrast);
    max-width: 100%; box-sizing: border-box; // avoid scrolling
    width: 100%;
}
input[type=range] {
    width: calc(100% - 1px); // chrome116 on android shows a scrollbar because of that 1px
}
input[type=checkbox] {
    transform: scale(1.7);
    accent-color: var(--button-bg);
}
textarea { font-size: 14pt }
label input[type=checkbox] {
    margin-right: .8em;
}
select { text-align: center; } // it is surely cooler on the options dialog

.hidden { display: none !important }

[class^="fa-"]:before, [class*=" fa-"]:before { /* don't need extra margin on fontello icons */
    margin: 0;
}
img.file-icon { height: 1em; }
.file-icon {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    vertical-align: text-bottom;
}

[role=button] .icon {
    margin-right: 0.5em;
}
.icon.mirror:before { transform: scaleX(-1); }
a {
    text-decoration: none;
    color: var(--link);
}
button {
    background-color: var(--button-bg);
    color: var(--button-text);
    padding: .4em .6em;
    display: inline-flex; align-items: center; justify-content: center; // get closer results between chrome and safari
    &.small { padding: 0 0.4em; height: 30px; }
    .icon { margin: -.2em 0; }
    .font-icon { vertical-align: middle; }
    border: transparent;
    text-decoration: none;
    border-radius: 0.3em;
    vertical-align: middle;
    cursor: pointer;
    &:hover { outline: 1px solid var(--mild-contrast); }
    transition: background-color .5s;
    &[disabled] {
        background-color: var(--faint-contrast);
    }
}
button.toggled {
    color: #fff;
    text-shadow: 0 0 3px #fff;
}
button.success {
    transition:  all .3s;
    background-color: var(--success);
    @extend .highlightedText;
}
a[role=button].success {
    transition:  all .3s;
    color: var(--success);
    text-shadow: 0 0 3px var(--text-high-contrast);
}
a.toggled {
    color: #223;
    text-shadow: 0 0 5px #223;
}
button, .breadcrumb { /* consistent focus color */
    &:focus-visible {
        outline: 3px solid var(--focus-color);
    }
}
a>button { width: 100%; height: 100%;  } /* link buttons, fill parent space */
input, select, ul a {
    &:focus-visible {
        border-radius: .3em;
        border-color: transparent;
        outline: 2px solid var(--focus-color);
    }
}

.icon-button {
    padding: .1em;
    font-size: 108%; height: 1.8em; // same height as text buttons (31px)
    width: 2em;
}

.error-msg {
    background-color: #faa;
    color: #833;
    padding: .5em 1em;
}
.hide-back {
    background-color: var(--bg);
}
header {
    @extend .hide-back;
    position: sticky;
    top: 0;
    padding: .2em .1em;
    z-index: 3; // necessary to not be covered by checkboxes
}

kbd {
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    display: inline-block;
    font-size: 0.85em;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    white-space: nowrap;
    margin-right: .5em;
}
.drop-over {
    box-shadow: 0 0 .3em .3em var(--warning);
}

.sliding {
    transition: flex .5s, flex-basis 0.5s ease, opacity 0.5s ease;
    overflow: hidden !important;
}
.hide-sliding {
    white-space: nowrap;
    margin: 0 !important;
    flex: 0 !important;
}

.ani-working { animation:2s blink infinite }

@keyframes spin {
    100% { transform: rotate(360deg); }
}
@keyframes fade-in {
    0% {opacity: 0}
    100% {opacity: 1}
}
/* ... */

